# corpus-testing

./: .env  .gitmodules  CNAME  README.md  index.html  publish.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.sh  sitemap.xml  test.sh
.github/workflows/: publish-site.yml
CSIP/: index.html
CSIP/CSIP1/: index.html
CSIP/CSIP10/: index.html
CSIP/CSIP100/: index.html
CSIP/CSIP101/: index.html
CSIP/CSIP102/: index.html
CSIP/CSIP103/: index.html
CSIP/CSIP104/: index.html
CSIP/CSIP105/: index.html
CSIP/CSIP106/: index.html
CSIP/CSIP107/: index.html
CSIP/CSIP108/: index.html
CSIP/CSIP109/: index.html
CSIP/CSIP11/: index.html
CSIP/CSIP110/: index.html
CSIP/CSIP111/: index.html
CSIP/CSIP112/: index.html
CSIP/CSIP113/: index.html
CSIP/CSIP114/: index.html
CSIP/CSIP116/: index.html
CSIP/CSIP117/: index.html
CSIP/CSIP118/: index.html
CSIP/CSIP119/: index.html
CSIP/CSIP12/: index.html
CSIP/CSIP13/: index.html
CSIP/CSIP14/: index.html
CSIP/CSIP15/: index.html
CSIP/CSIP16/: index.html
CSIP/CSIP17/: index.html
CSIP/CSIP18/: index.html
CSIP/CSIP19/: index.html
CSIP/CSIP2/: index.html
CSIP/CSIP20/: index.html
CSIP/CSIP21/: index.html
CSIP/CSIP22/: index.html
CSIP/CSIP23/: index.html
CSIP/CSIP24/: index.html
CSIP/CSIP25/: index.html
CSIP/CSIP26/: index.html
CSIP/CSIP27/: index.html
CSIP/CSIP28/: index.html
CSIP/CSIP29/: index.html
DIP/: index.html
SIP/: index.html
config/: commons-ip.json  corpora.json  eark-commons.json  eark-validator.json  runners.json
eark_corpora/: __init__.py  loader.py
site/: _config.yml
templates/: badges.html.jinja  base.html.jinja  case.html.jinja  corpus.html.jinja  home.html.jinja  navbar.html.jinja  package.html.jinja  page.html.jinja
(+526 files in other folders)
